# ros2_vai_yolox

./: README.md
ros2_vai_ws/src/vai_yolox_pkg/: package.xml  setup.cfg  setup.py
ros2_vai_ws/src/vai_yolox_pkg/config/: vai_yolox_param.yaml
ros2_vai_ws/src/vai_yolox_pkg/launch/: vai_yolox_launch.py  vai_yolox_webcam_launch.py
ros2_vai_ws/src/vai_yolox_pkg/vai_yolox_pkg/: coco.py  demo_utils.py  yolox_node.py
